--- a/client/src/components/postDetail/postDetail.scss
+++ b/client/src/components/postDetail/postDetail.scss
@@ -1,55 +1,116 @@
 .app__postDetail{
-  font-family: var(--font-sans-serif);
-  width:700px;
-  margin: 15px auto;
-  padding:10px;
-  border:1px solid rgb(219, 229, 230);
-  border-radius:1rem;
-  background-color:#FFFFFF
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 640px;
+  min-height: calc(100vh - 500px);
+  margin:20px auto;
 }
 
-.app__postDetail-title{
-  text-align: center;
-  margin:18px 10px 18px 10px;
-  font-size:1.5rem;
-  color: gray;
-  font-weight: bold;
+.app__postDetail-item{
+  width: 100%;
+  flex:1;
 }
 
-.app__postDetail-img {
-  margin: 5px auto;
-  width: 450px;
-  height: 350px;
-  & img {
-    width: 100%;
-    height: 100%;
-      margin: 5px auto;
-      object-fit: cover;
-    }
-    margin-bottom:10px;
+.app__postDetail-item-panel{
+  overflow:visible;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, .1);
+  background:#fff;
+  border-radius: 5px;
+  height: 100%;
 }
 
-.app__postDetail-text{
-  padding: 15px;
-}
-
-.app__postDetail-description{
+.app__postDetail-item-image-container{
+  position: relative;
+  display:flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items:center;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  line-height:1.5rem;
-  font-size: 1.25rem;
-  font-weight:450;
-  margin:10px;
+}
+
+.app__postDetail-item-image-background{
+  position: absolute;
+  left: -5%;
+  top: -5%;
+  width: 110%;
+  height: 110%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  filter:blur(15px)
+}
+
+.app__postDetail-item-image-wrapper{
+  position: relative;
+  height: 100%;
+  width: 75%;
+}
+
+.app__postDetail-item-main-img{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  z-index: 1;
+  opacity: 1;
+  transition: opacity .2s;
+  // box-shadow: 0 0 5px 1px rgba(0, 0, 0, .1);
+}
+
+.app__postDetail-item-detail-container{
+  padding: 24px;
+}
+
+.app__postDetail-item-main-detail{
+  display:flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items:flex-start;
+}
+
+.app__postDetail-item-other{
+  display:flex;
+  flex-direction:column;
+}
+
+.app__postDetail-item-content{
+  overflow:visible;
+  display:flex;
+  flex-direction:column;
+  flex:2;
+  width: 100%;
+}
+
+.app__postDetail-header{
+  font-size:22px;
+  line-height:1.1;
+  font-weight:400;
 }
 
 .app__postDetail-price{
-  margin: 10px;
+  margin:10px 0;
+  font-size:28px;
+  line-height:1;
 }
 
-.app__postDetail-postby{
-  margin: 10px;
-  font-weight: bold;
-  display:flex;
-  flex-direction:row;
-  justify-content:space-between;
-  align-items:center;
+.app__postDetail-price-span{
+  color:#ff552e;
+}
+
+.app__postDetail-description{
+  margin:15px 0 20px;
+}
+
+.app__postDetail-description-content{
+  font-size:14px;
+  line-height:22px;
+}
+
+.app__postDetail-description-wrapper{
+  overflow-wrap:break-word;
+  word-break:normal;
 }
