--- a/client/src/components/thumbCard/thumbCard.scss
+++ b/client/src/components/thumbCard/thumbCard.scss
@@ -45,10 +45,16 @@
 }
 
 .app__thumbCard-details{
-  display:block;
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-between;
 }
 
 .app__thumbCard-title{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   padding-right: 30px;
   font-size: 16px;
   font-weight: 400;
@@ -97,4 +103,9 @@
   color: #fb6f4f;
   font-size: 13px;
   line-height: 1em;
+}
+
+.app__thumbCard-right-time{
+  line-height: 10px;
+  color: #747474
 }
