--- a/client/src/components/postDetail/postDetail.scss
+++ b/client/src/components/postDetail/postDetail.scss
@@ -3,12 +3,14 @@
   flex-direction: row;
   flex-wrap: wrap;
   max-width: 640px;
-  min-height: calc(100vh - 500px);
+  height:480px;
+  // min-height: calc(100vh - 500px);
   margin:20px auto;
 }
 
 .app__postDetail-item{
   width: 100%;
+  height: 100%;
   flex:1;
 }
 
@@ -54,7 +56,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   z-index: 1;
   opacity: 1;
   transition: opacity .2s;
