--- a/client/src/components/thumbCard/thumbCard.scss
+++ b/client/src/components/thumbCard/thumbCard.scss
@@ -1,7 +1,7 @@
 .app__thumbCard{
  box-sizing: border-box;
  background: #fff;
- flex:0 0 24%;
+ flex:0 0 21%;
 
  position: relative;
  overflow: hidden;
@@ -10,13 +10,15 @@
  background-color: #fff;
  box-shadow: 0 1px 6px rgba(0, 0, 0, .1);
  cursor: pointer;
- transition: transform .5s ease-in, opacity .8s, box-shadow .3s ease-in;
+ transition: transform .1s ease-in, opacity .5s, box-shadow .1s ease-in;
  height: 250px;
- margin: 0 7px 15px 7px;
+ margin: 0 7px 25px 7px;
+ border-radius: 3px;
 
  &:hover{
-    box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
-    transform: translateY(-2px);
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    // box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
+    transform: translateY(-3px);
  }
 }
 
@@ -52,6 +54,7 @@
 }
 
 .app__thumbCard-title{
+  margin:10px 0;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -106,6 +109,13 @@
 }
 
 .app__thumbCard-right-time{
+  display: flex;
+  align-items: center;
+  overflow: hidden;
   line-height: 10px;
   color: #747474
+}
+
+.app__thumbCard-right-time-text{
+  margin-left:5px;
 }
