--- a/client/src/components/thumbCard/thumbCard.scss
+++ b/client/src/components/thumbCard/thumbCard.scss
@@ -2,7 +2,6 @@
  box-sizing: border-box;
  background: #fff;
  flex:0 0 21%;
-
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
@@ -19,6 +18,9 @@
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     // box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
     transform: translateY(-3px);
+ }
+ @media (max-width: 768px) {
+  flex:0 0 24%
  }
 }
 
@@ -119,3 +121,4 @@
 .app__thumbCard-right-time-text{
   margin-left:5px;
 }
+
