--- a/client/src/components/topbar/topbar.scss
+++ b/client/src/components/topbar/topbar.scss
@@ -2,7 +2,7 @@
   display:flex;
   align-items:center;
   justify-content:space-between;
-  height: 35px;
+  height: 52px;
   background: #fff;
   color: #555;
   border-bottom: 1px solid #ddd;
@@ -15,4 +15,17 @@
 
 .app__topright-right {
     text-align: center;
+}
+
+.sticky-top {
+  width:calc(100% - 20px);
+  background:#FB6F4F;
+  color: #fff;
+  height: 40px;
+  opacity: 0.8;
+  z-index: 20;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
