--- a/client/src/components/topbar/topbar.scss
+++ b/client/src/components/topbar/topbar.scss
@@ -1,12 +1,11 @@
 .app__topbar{
+  background: #FB6F4F;
   display:flex;
   align-items:center;
   justify-content:space-between;
-  height: 52px;
-  background: #fff;
-  color: #555;
+  color: #fff;
   border-bottom: 1px solid #ddd;
-  padding:0 10px
+  padding:12px;
 }
 
 .app__topbar-left {
@@ -17,15 +16,19 @@
     text-align: center;
 }
 
-.sticky-top {
-  width:calc(100% - 20px);
-  background:#FB6F4F;
-  color: #fff;
-  height: 40px;
-  opacity: 0.8;
-  z-index: 20;
-  position: fixed;
-  top: 0;
-  left: 0;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+.app__topbar-right-user-image {
+  border-radius: 50%;
 }
+
+// .sticky-top {
+//   width:calc(100% - 20px);
+//   background:#FB6F4F;
+//   color: #fff;
+//   height: 40px;
+//   opacity: 0.8;
+//   z-index: 20;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+// }
