--- a/client/src/components/topbar/topbar.scss
+++ b/client/src/components/topbar/topbar.scss
@@ -36,9 +36,9 @@
   }
 }
 
-.app__topbar-right-user-image {
-  border-radius: 50%;
-}
+// .app__topbar-right-user-image {
+//   border-radius: 50%;
+// }
 
 // .sticky-top {
 //   width:calc(100% - 20px);
