--- a/client/src/pages/postPage/postList.scss
+++ b/client/src/pages/postPage/postList.scss
@@ -1,8 +1,8 @@
-.app__postlist-card {
-  margin:0 0 40px;
-  display:flex;
-  flex-flow:row wrap;
-  align-content: flex-start;
-  justify-content:center;
-  position: relative;
-}
+// .app__postlist-card {
+//   margin:0 0 40px;
+//   display:flex;
+//   flex-flow:row wrap;
+//   align-content: flex-start;
+//   justify-content:center;
+//   position: relative;
+// }
