--- a/client/src/components/categories/categories.scss
+++ b/client/src/components/categories/categories.scss
@@ -1,30 +1,30 @@
-.app__categories{
-  width: 100%;
-  margin:18px auto;
-  text-align: center;
-  display:flex;
-  a {
+// .app__categories{
+//   width: 100%;
+//   margin:18px auto;
+//   text-align: center;
+//   display:flex;
+//   a {
 
-    &:hover {
-      color: #fb6f4f;
-      border-bottom: 2px solid #fb6f4f;
-    }
-  }
-}
-.app__categories-ul{
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  align-items: center;
-  // width: 540px;
-  height: 50px;
-  list-style: none;
-}
+//     &:hover {
+//       color: #fb6f4f;
+//       border-bottom: 2px solid #fb6f4f;
+//     }
+//   }
+// }
+// .app__categories-ul{
+//   display: flex;
+//   justify-content: center;
+//   width: 100%;
+//   align-items: center;
+//   // width: 540px;
+//   height: 50px;
+//   list-style: none;
+// }
 
-.app__categories-li{
-  margin:0 3%;
-}
-.active {
-  color:#ff552e;
-  border-bottom: 2px solid #ff552e;
-}
+// .app__categories-li{
+//   margin:0 3%;
+// }
+// .active {
+//   color:#ff552e;
+//   border-bottom: 2px solid #ff552e;
+// }
