--- a/client/src/pages/postPage/postpage.scss
+++ b/client/src/pages/postPage/postpage.scss
@@ -1,14 +1,14 @@
-.app__postpage{
-  max-width: 1280px;
-  margin:17px auto 0; 
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-}
-.app__postlist-card {
-  margin: 0 0 40px;
-  display: flex;
-  flex-flow: row wrap;
-  align-content: flex-start;
-  justify-content: center;
-}
+// .app__postpage{
+//   max-width: 1280px;
+//   margin:17px auto 0; 
+//   display:flex;
+//   flex-direction:column;
+//   align-items:center;
+// }
+// .app__postlist-card {
+//   margin: 0 0 40px;
+//   display: flex;
+//   flex-flow: row wrap;
+//   align-content: flex-start;
+//   justify-content: center;
+// }
