--- a/client/src/components/postDetail/postDetail.scss
+++ b/client/src/components/postDetail/postDetail.scss
@@ -118,7 +118,7 @@
   word-break:normal;
 }
 
-.app__spinner-container {
-  position: relative;
-  margin-top:95px;
-}
+// .app__spinner-container {
+//   position: relative;
+//   margin-top:95px;
+// }
