redesign input form

--- a/client/src/pages/creatPostPage/landPage.scss
+++ b/client/src/pages/creatPostPage/landPage.scss
@@ -1,33 +1,33 @@
-.app__create-landpage-select{
-  margin: 50px auto;
-  justify-content:center;
-  align-items:center;
-  display:flex;
-  width: 900px;
-}
+// .app__create-landpage-select{
+//   margin: 50px auto;
+//   justify-content:center;
+//   align-items:center;
+//   display:flex;
+//   width: 900px;
+// }
 
-.app__create-landpage-title{
-  font-size:1.25rem;
-  margin: 0 10px;
-}
+// .app__create-landpage-title{
+//   font-size:1.25rem;
+//   margin: 0 10px;
+// }
 
-.app__create-options {
-  width:300px;
-  margin: 0 5px;
-}
+// .app__create-options {
+//   width:300px;
+//   margin: 0 5px;
+// }
 
-.app__creat-landpage-btn{
-  height:100%;
-  button {
-    padding: 8px;
-      height: 100%;
-      width: 80px;
-      background: #ff552e;
-      border: 0;
-      border-radius: 5px;
-      cursor: pointer;
-      text-align: center;
-      color: #fff;
-      font-size: 1rem;
-  }
-}
+// .app__creat-landpage-btn{
+//   // height:100%;
+//   button {
+//     padding: 8px;
+//       height: 100%;
+//       width: 80px;
+//       background: #ff552e;
+//       border: 0;
+//       border-radius: 5px;
+//       cursor: pointer;
+//       text-align: center;
+//       color: #fff;
+//       font-size: 1rem;
+//   }
+// }
