--- a/client/src/pages/listPage/listPage.scss
+++ b/client/src/pages/listPage/listPage.scss
@@ -15,18 +15,18 @@
   background-color: #ccc
 }
 
-.app__list-right{
-  flex: 1;
-  min-height: 100vh;
-  min-width: 0;
-  position: relative;
-  transform: translate(0);
-}
+// .app__list-right{
+//   flex: 1;
+//   min-height: 100vh;
+//   min-width: 0;
+//   position: relative;
+//   transform: translate(0);
+// }
 
-.app__list-right-main{
-  position: relative;
-  height: 100%;
-}
+// .app__list-right-main{
+//   position: relative;
+//   height: 100%;
+// }
 
 // .test {
 //   position: absolute;
